--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@ html, body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 150%; /* Increase base font size by 20% across the site */
 }
 
 .container {
